<resources>
    <string name="app_name">MoneyDrop</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="neutral">Neutral</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">Dialog message</string>
    <string name="app_logo">App logo</string>
    <string name="get_started">Get started</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="intro">Money should be easy to get, we made it easy.</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="back_button">Back Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_fragment">Verification Fragment</string>
    <string name="registration">Registration</string>
    <string name="email_verification_note">Enter your email address, we will send you OTP to verify it.</string>
    <string name="phone_verification_note">Enter your phone number, we will send you OTP to verify it.</string>
    <string name="resend_otp">Didn\'t get OTP? Resend Code</string>
    <string name="email_hint">Enter your email address</string>
    <string name="agreement_notice">By clicking start you agree to our</string>
    <string name="privacy_policy_and_terms">Privacy Policy and Terms</string>
    <string name="start_using">Start using</string>
    <string name="verification">Verification</string>
    <string name="verification_note">Enter the 5 digit code we sent you</string>
    <string name="resend_code">Resend code</string>
    <string name="continues">Continue</string>
    <string name="button">Button</string>
    <string name="resending">Resending…</string>
    <string name="fill_in_your_information">Fill in your information</string>
    <string name="personal_information">Please enter your personal information.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="create_new_password">Create new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="success">Success!</string>
    <string name="successful_registration_note">You have been registered successfully, now you are good to go.</string>
    <string name="error">Error</string>
    <string name="select_dob">Please select your date of birth</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="welcome">Welcome back</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_note">Please enter your details to reset your password</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_note">Please enter the OTP sent to your email to reset your password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset">Reset</string>
    <string name="already_have_a_code">I already have a code</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_loans">Loans</string>
    <string name="title_wallet">Wallet</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="offer_loan">Offer Loan</string>
    <string name="request_loan">Request Loan</string>
    <string name="history">History</string>
    <string name="top_up">Top Up</string>
    <string name="loan_request">Loan request</string>
    <string name="loan_request_title">Loan Request</string>
    <string name="view_all">View all</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_icon">Transaction Icon</string>
    <string name="transaction_date">01/11/20</string>
    <string name="loan_date">01/11/20</string>
    <string name="transaction_amount">#12,000</string>
    <string name="transaction_status">Pending</string>
    <string name="status">Status</string>
    <string name="transactions">Transactions</string>
    <string name="background_bubble">Background bubble</string>
    <string name="user_name">John Doe</string>
    <string name="wallet">Wallet</string>
    <string name="wallets">Wallets</string>
    <string name="cards">Cards</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="user_account">User Account</string>
    <string name="logout">Logout</string>
    <string name="select_image">Select Image</string>
    <string name="user_profile">User Profile</string>
    <string name="account_name">Account Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">08161348954</string>
    <string name="email_address_hint">john.doe@gmail.com</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="nav">Nav</string>
    <string name="edit_info">Edit Info</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="image_preview">Image Preview</string>
    <string name="close">Close</string>
    <string name="middle_name">Middle name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_hint">1990–10–23</string>
    <string name="bvn">BVN</string>
    <string name="bvn_hint">22398475937</string>
    <string name="no_content">No Content</string>
    <string name="title_activity_loan_request">Loan Request</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_more_record">No more record</string>
    <string name="item_count">Item Count</string>
    <string name="no_record">No record</string>
    <string name="_5_in_return">5% in return</string>
    <string name="decrement">Decrement</string>
    <string name="offer_amount">Offer amount</string>
    <string name="request_amount">Request amount</string>
    <string name="previous_offers">Previous offers</string>
    <string name="cancel">Cancel</string>
    <string name="make_offer">Make offer</string>
    <string name="make_request">Make request</string>
    <string name="offers">Offers</string>
    <string name="requests">Requests</string>
    <string name="loan_offers">Loan Offers</string>
    <string name="loan_requests">Loan Requests</string>
    <string name="interest_type">Interest Type</string>
    <string name="loan_type">Loan Type</string>
    <string name="loan_purpose">Loan Purpose</string>
    <string name="note_optional">Note (optional)</string>
    <string name="enter_note">Enter note</string>
    <string name="loan_icon">Loan Icon</string>
    <string name="date">11/20</string>
    <string name="amount">#12,000</string>
    <string name="amount_text">Amount</string>
    <string name="loan_status">Pending</string>
    <string name="my_loans">My Loans</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="min_amount">Amount not less than 1000</string>
    <string name="credit_card">Credit Card</string>
    <string name="proceed">Proceed</string>
    <string name="secured_payment">Secured Payment by</string>
    <string name="payment_gateways">Payment Gateways</string>
    <string name="card_number">Card number</string>
    <string name="card_number_hint">**** **** **** ****</string>
    <string name="expiration">Expiration</string>
    <string name="cvv">CVV</string>
    <string name="cvv_hint">***</string>
    <string name="add_new_card">Add new card</string>
    <string name="cards_added">Added Cards</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="add_card">Add Card</string>
    <string name="card_name">Card Name</string>
    <string name="card_name_optional">Card Name (Optional)</string>
    <string name="card_icon">Card Icon</string>
    <string name="check_mark">Check Mark</string>
    <string name="remove_card">Remove card</string>
    <string name="options">Options</string>
    <string name="select_card">Select Card</string>
    <string name="available_balance">Available balance</string>
    <string name="cash_out">Cash Out</string>
    <string name="add_new_account">Add new</string>
    <string name="added_accounts">Added Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_icon">Bank Icon</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="bank">Bank</string>
    <string name="add_account">Add Account</string>
    <string name="banks">Banks</string>
    <string name="remove_account">Remove account</string>
    <string name="select_bank_account">Select Bank Account</string>
    <string name="close_button">Close button</string>
    <string name="item">Item</string>
    <string name="select_a_bank">Please select a bank</string>
    <string name="select_bank">Select bank</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="receipt">Receipt</string>
    <string name="transaction_direction">Transaction Direction</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="charges">Charges</string>
    <string name="narration">Narration</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="transaction_instrument">Transaction Instrument</string>
    <string name="currency">Currency</string>
    <string name="save">Save</string>
    <string name="loan_notice">Loans may take a day to be approved</string>
    <string name="view_requests">View Requests</string>
    <string name="select">Select</string>
    <string name="current_balance">Current Balance</string>
    <string name="notification">Notification</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="notification_text">Here\'s a notification for you</string>
    <string name="time">3:00pm</string>
    <string name="loan">Loan</string>
    <string name="loan_applicants">Loan Applicants</string>
    <string name="loan_approved">Loan Approved</string>
    <string name="no_applicant">No Applicant</string>
    <string name="grant">Grant</string>
    <string name="granted">Granted</string>
    <string name="name">Name</string>
    <string name="no_loan">No Loan</string>
    <string name="no_transaction">No Transaction</string>
    <string name="no_notification">No Notification</string>
    <string name="loan_details">Loan Details</string>
    <string name="loan_owner">Loan owner</string>
    <string name="loan_reference">Loan Reference</string>
    <string name="loan_tenure_hint">6 months</string>
    <string name="interest">Interest</string>
</resources>