<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/activity_vertical_margin"
    android:weightSum="3">

    <ImageView
        android:id="@+id/transaction_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_gravity="center"
        android:src="@drawable/ic_transaction_outgoing_pending"
        android:contentDescription="@string/transaction_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transaction_type"
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/transaction_type"
            android:textColor="@color/colorGray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view_style"
            android:gravity="start"
            android:textColor="@color/colorGrayDark"
            android:text="@string/transaction_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/text_view_style"
            android:gravity="start"
            android:textColor="@color/pending"
            android:text="@string/transaction_amount"/>

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/tag_pending"
            android:gravity="start"
            android:text="@string/transaction_status"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>