<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view_style"
            android:layout_margin="0dp"
            android:gravity="start"
            android:fontFamily="@font/campton_medium"
            android:textSize="23sp"
            android:textColor="@color/titleColorGray"
            android:text="@string/amount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_view_style"
            android:gravity="start"
            android:textColor="@color/subtitleColorGray"
            android:text="@string/credit_card"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_20"
        android:paddingStart="@dimen/padding_30"
        android:paddingEnd="@dimen/padding_30"
        android:paddingBottom="@dimen/margin_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_view_style"
                android:gravity="start"
                android:textColor="@color/black"
                android:text="@string/card_number"/>

            <com.quidvis.moneydrop.utility.view.EditCard
                android:id="@+id/card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                style="@style/edit_text_stroked_style"
                android:inputType="text"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_view_style"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:text="@string/expiration"/>

                <EditText
                    android:id="@+id/card_expiration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    style="@style/edit_text_stroked_style"
                    android:inputType="date"
                    android:autofillHints="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_view_style"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:text="@string/cvv"/>

                <EditText
                    android:id="@+id/card_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cvv"
                    style="@style/edit_text_stroked_style"
                    android:inputType="number"
                    android:autofillHints="" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <!--  This is the main content -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/background_rounded_stroke"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_payments_supports"
                    android:contentDescription="@string/payment_gateways" />

            </RelativeLayout>

            <!--  This is the title label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:padding="@dimen/padding_5"
                android:layout_centerHorizontal="true"
                android:text="@string/secured_payment"
                android:textColor="@color/colorGrayLight" />

        </RelativeLayout>

        <Button
            android:id="@+id/create_acct_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:layout_gravity="center"
            style="@style/button_style"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>